if(PYTHONLIBS_FOUND)
  FIND_PACKAGE(SWIG REQUIRED)
  INCLUDE(${SWIG_USE_FILE})

  INCLUDE_DIRECTORIES(${PYTHON_INCLUDE_PATH})
  INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/include)
  INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})

  SET(CMAKE_SWIG_FLAGS "")
  SET_SOURCE_FILES_PROPERTIES("interface.i" PROPERTIES CPLUSPLUS ON)
  SET_SOURCE_FILES_PROPERTIES("interface.i" PROPERTIES SWIG_FLAGS "-includeall")

  SWIG_ADD_MODULE(pyfaunus python "interface.i")
  SWIG_LINK_LIBRARIES(pyfaunus libfaunus ${PYTHON_LIBRARIES})
endif()

