include_directories(${CMAKE_SOURCE_DIR}/include)

#----- function to add a generic C++ example -----
function( fau_example tname tdir tsrc )
  add_executable( ${tname} "${tdir}/${tsrc}" )
  set_source_files_properties( "${tdir}/${tsrc}" PROPERTIES LANGUAGE CXX)
  set_target_properties(${tname}
    PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/${tdir}/")
  target_link_libraries(${tname} libfaunus)
  install (DIRECTORY "${tdir}"
           DESTINATION "share/faunus/examples"
           PATTERN ".svn" EXCLUDE)
endfunction( fau_example )

#----- function to add a generic C++ example (HYPERSPHERE) -----
function( fau_hyperexample tname tdir tsrc )
  add_executable( ${tname} "${tdir}/${tsrc}" )
  set_source_files_properties( "${tdir}/${tsrc}" PROPERTIES LANGUAGE CXX)
  set_target_properties(${tname}
    PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/${tdir}/"
    EXCLUDE_FROM_ALL TRUE )
  target_link_libraries(${tname} libhyperfaunus)
  install (DIRECTORY "${tdir}"
           DESTINATION "share/faunus/examples"
           PATTERN ".svn" EXCLUDE)
endfunction( fau_hyperexample )

#----- add examples to build process -----
# Arguments: (target directory source)
fau_example(hole1 widom hole1.cpp)
fau_example(pka titration pka.cpp)
fau_example(pkaGC_sphere titration gcpka.cpp)
fau_example(pkaGC_cube titration gcpka.cpp)
fau_example(pkaDH titration pkaDH.cpp)
fau_example(pkaAT titration pkaDH.cpp)
fau_example(twobody twobody twobody.cpp)
fau_example(twobodyGC twobody twobodyGC.cpp)
fau_example(twobodyDH twobody twobodyDH.cpp)
fau_example(twobodyDHMP twobody twobodyDH.cpp)
fau_example(twobodyDHDP twobody twobodyDH.cpp)
fau_example(twobody-hof twobody-hofmeister twobody-hof.cpp)
fau_example(widom_cube widom widom.cpp)
fau_example(widom_sphere widom widom.cpp)
fau_example(widom_elhcvdw widom widom.cpp)
fau_example(widom_ellj widom widom.cpp)
fau_example(gcsalt widom gcsalt.cpp)
fau_example(manybody manybody manybody.cpp)
fau_example(manybodyMP manybody manybody.cpp)
fau_example(isobaric isobaric isobaric.cpp)
fau_example(isobaricMP isobaric isobaric.cpp)
fau_example(isobaricDP isobaric isobaric.cpp)
fau_example(isobaricPLANE isobaric isobaric.cpp)
#fau_example(isobaricFDH isobaric isobaric.cpp)
fau_example(binding binding binding.cpp)
#fau_example(printpotential tools printpotential.cpp)
fau_example(random tools random.cpp)
fau_example(cgp1 tools cg1.cpp)
fau_example(cgp2 tools cg2.cpp)
fau_example(pmf2muex tools pmf2muex.cpp)
fau_example(g_widom tools g_widom.cpp)
#fau_example(spce spce spce.cpp)
#fau_example(spcecavity spce spcecavity.cpp)
#fau_example(acid spce spceacid.cpp)
#fau_example(spceMI spce spce.cpp)
fau_example(membrane membrane mem.cpp)
fau_example(memp wallprotein memp.cpp)
fau_example(wp_gaussian wallprotein wp_gaussian.cpp)
fau_example(saltsolution widom saltlab.cpp)
fau_hyperexample(hyperbulk hypersphere hyperbulk.cpp)

#----- target specific build options -----
set_target_properties( twobodyDHMP PROPERTIES COMPILE_DEFINITIONS "MONOPOLE")
set_target_properties( twobodyDHDP PROPERTIES COMPILE_DEFINITIONS "DIPOLE_CUTOFF")
set_target_properties( pkaAT PROPERTIES COMPILE_DEFINITIONS "DHTEIXEIRA")
set_target_properties( pkaGC_cube PROPERTIES COMPILE_DEFINITIONS "MI")
set_target_properties( manybodyMP PROPERTIES COMPILE_DEFINITIONS "MONOPOLE")
set_target_properties( isobaricMP PROPERTIES COMPILE_DEFINITIONS "MONOPOLE")
set_target_properties( isobaricDP PROPERTIES COMPILE_DEFINITIONS "DIPOLE_CUTOFF")
set_target_properties( isobaricPLANE PROPERTIES COMPILE_DEFINITIONS "XYPLANE")
#set_target_properties( isobaricFDH PROPERTIES COMPILE_DEFINITIONS "FASTDH")
set_target_properties( widom_sphere PROPERTIES COMPILE_DEFINITIONS "WIDOM_SPHERE")
set_target_properties( widom_elhcvdw PROPERTIES COMPILE_DEFINITIONS "WIDOM_ELHCVDW")
set_target_properties( widom_ellj PROPERTIES COMPILE_DEFINITIONS "WIDOM_ELLJ")
#set_target_properties( spceMI PROPERTIES COMPILE_DEFINITIONS "SPCE_MINIMAGE")

#----- examples where openbabel is needed -----
if (ENABLE_BABEL AND OPENBABEL_FOUND)
  include_directories(${OPENBABEL_INCLUDE_DIR})
  fau_example(babel2aam tools babel2aam.cpp)
  fau_example(wp wallprotein wp.cpp)
  fau_example(wp_noslit wallprotein wp.cpp)
  fau_example(wp_lipid wallprotein wp_lipid.cpp)
  fau_example(glu3gc titration glu3gc.cpp)
  fau_example(glu3gc_cube titration glu3gc.cpp)
  fau_example(glu3gc_wall titration glu3gc_lipowall.cpp)
  set_target_properties( glu3gc_cube PROPERTIES COMPILE_DEFINITIONS "MI")
  set_target_properties( wp_noslit PROPERTIES COMPILE_DEFINITIONS "NOSLIT")
endif (ENABLE_BABEL AND OPENBABEL_FOUND)

